MAGENTO-2385 Added http agent + simplifying constructs + fixing issues
